# deadline-cloud-for-3ds-max

./: .gitattributes  .gitignore  CHANGELOG.md  DEVELOPMENT.md  README.md  depsBundle.py  depsBundle.sh  hatch.toml  hatch_custom_hook.py  pyproject.toml  requirements-testing.txt
.github/workflows/: code_quality.yml  codeql.yml  reuse_python_build.yml
install_files/: AWSDeadline-RunJobBundleTests.mcr  AWSDeadline-SubmitToDeadlineCloud.mcr  STDCMenuCreator.ms
job_bundle_output_tests/: README.md
scripts/: build_wheels.sh  create_adaptor_packaging_artifact.sh
src/deadline/max_adaptor/MaxAdaptor/: __init__.py  __main__.py  adaptor.py
src/deadline/max_adaptor/MaxAdaptor/schemas/: init_data.schema.json  run_data.schema.json
src/deadline/max_adaptor/MaxClient/: __init__.py  max_client.py
src/deadline/max_adaptor/MaxClient/render_handlers/: __init__.py  art_handler.py  corona_handler.py  default_max_handler.py  vray_handler.py
src/deadline/max_submitter/: adaptor_override_environment.yaml  create_job_bundle.py  data_classes.py  data_const.py  default_max_job_template.yaml  job_bundle_output_test_runner.py  max_render_submitter.py  run_ui.py  sanity_checks.py
src/deadline/max_submitter/ui/: scene_settings_tab.py  submit_dialog.py
src/deadline/max_submitter/utilities/: log_utils.py  max_utils.py  submission_utils.py
test/: test_copyright_headers.py
test/deadline_adaptor_for_3ds_max/unit/: __init__.py
test/deadline_adaptor_for_3ds_max/unit/MaxAdaptor/: test_adaptor.py
test/deadline_adaptor_for_3ds_max/unit/MaxClient/: test_client.py
test/deadline_adaptor_for_3ds_max/unit/MaxClient/render_handlers/: test_max_handler_base.py
